--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
                                 </filter>
                             </defs>
                         </svg>
-                        <a href="curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae" id="component-1"
+                        <a href="/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae" id="component-1"
                            class="button--1"> <!--onmousedown="bleep.play()"-->
                             Curriculum Vitae
                             <span class="button__container">
@@ -281,7 +281,8 @@
                                     </filter>
                                 </defs>
                             </svg>
-                            <a href="curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae" id="component-2"
+                            <a href="/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
+                               id="component-2"
                                class="button--2" style="filter:url('#filter-goo-2')"> <!--onmousedown="bleep.play()"-->
                                 Curriculum Vitae
                                 <span class="button__bg"></span>
@@ -648,7 +649,7 @@
                                             </ul>
                                             <div class="address-bar">http://cr7shop.ir/</div>
                                         </div>
-                                        <a href="cr7shop02.jpg" target="_blank"
+                                        <a href="/images/cr7shop02.jpg" target="_blank"
                                            title="CR7 Shop" class="popup-link">
                                             <img src="../src/assets/images/cr7shop01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -668,7 +669,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.iranmrcarpet.com/</div>
                                         </div>
-                                        <a href="iranmrcarpet02.jpg" target="_blank"
+                                        <a href="/images/iranmrcarpet02.jpg" target="_blank"
                                            title="Iran Mr. Carpet" class="popup-link">
                                             <img src="../src/assets/images/iranmrcarpet01.jpg"
                                                  alt="img-portfolio"
@@ -689,7 +690,7 @@
                                             </ul>
                                             <div class="address-bar">http://rostani.com/</div>
                                         </div>
-                                        <a href="rostani02.jpg" target="_blank"
+                                        <a href="/images/rostani02.jpg" target="_blank"
                                            title="Rostani" class="popup-link">
                                             <img src="../src/assets/images/rostani01.jpg"
                                                  alt="img-portfolio"
@@ -710,7 +711,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.afzoonravan.com/</div>
                                         </div>
-                                        <a href="afzoonravan02.jpg" target="_blank"
+                                        <a href="/images/afzoonravan02.jpg" target="_blank"
                                            title="Afzoonravan" class="popup-link">
                                             <img src="../src/assets/images/afzoonravan01.jpg"
                                                  alt="img-portfolio"
@@ -731,7 +732,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.bsi.ir/</div>
                                         </div>
-                                        <a href="bsi02.jpg" target="_blank"
+                                        <a href="/images/bsi02.jpg" target="_blank"
                                            title="Petropaak" class="popup-link">
                                             <img src="../src/assets/images/bsi01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -751,7 +752,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.karafarinbank.ir/</div>
                                         </div>
-                                        <a href="karafarinbank02.jpg" target="_blank"
+                                        <a href="/images/karafarinbank02.jpg" target="_blank"
                                            title="Petropaak" class="popup-link">
                                             <img src="../src/assets/images/karafarinbank01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -771,7 +772,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.vichyteen.com/</div>
                                         </div>
-                                        <a href="vichyteen02.jpg" target="_blank"
+                                        <a href="/images/vichyteen02.jpg" target="_blank"
                                            title="VICHY" class="popup-link">
                                             <img src="../src/assets/images/vichyteen01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -791,7 +792,7 @@
                                             </ul>
                                             <div class="address-bar">http://vata.ir/</div>
                                         </div>
-                                        <a href="vata02.jpg" target="_blank"
+                                        <a href="/images/vata02.jpg" target="_blank"
                                            title="Vata" class="popup-link">
                                             <img src="../src/assets/images/vata01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -811,7 +812,7 @@
                                             </ul>
                                             <div class="address-bar">https://novinleather.com/</div>
                                         </div>
-                                        <a href="novinleather02.jpg" target="_blank"
+                                        <a href="/images/novinleather02.jpg" target="_blank"
                                            title="Novinleather" class="popup-link">
                                             <img src="../src/assets/images/novinleather01.jpg"
                                                  alt="img-portfolio"
@@ -832,7 +833,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.midhco.com/</div>
                                         </div>
-                                        <a href="midhco02.jpg" target="_blank"
+                                        <a href="/images/midhco02.jpg" target="_blank"
                                            title="MIDHCO" class="popup-link">
                                             <img src="../src/assets/images/midhco01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -852,7 +853,7 @@
                                             </ul>
                                             <div class="address-bar">http://gtc1.org/</div>
                                         </div>
-                                        <a href="gtc102.jpg" target="_blank"
+                                        <a href="/images/gtc102.jpg" target="_blank"
                                            title="GTC1" class="popup-link">
                                             <img src="../src/assets/images/gtc101.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -872,7 +873,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.fabrioni.com/</div>
                                         </div>
-                                        <a href="fabrioni02.jpg" target="_blank"
+                                        <a href="/images/fabrioni02.jpg" target="_blank"
                                            title="Fabrioni" class="popup-link">
                                             <img src="../src/assets/images/fabrioni01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -892,7 +893,7 @@
                                             </ul>
                                             <div class="address-bar">http://medghoo.com/</div>
                                         </div>
-                                        <a href="medghoo02.jpg" target="_blank"
+                                        <a href="/images/medghoo02.jpg" target="_blank"
                                            title="Medghoo" class="popup-link">
                                             <img src="../src/assets/images/medghoo01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -912,7 +913,7 @@
                                             </ul>
                                             <div class="address-bar">http://fastclick.ir/</div>
                                         </div>
-                                        <a href="fastclick02.jpg" target="_blank"
+                                        <a href="/images/fastclick02.jpg" target="_blank"
                                            title="Fastclick" class="popup-link">
                                             <img src="../src/assets/images/fastclick01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -932,7 +933,7 @@
                                             </ul>
                                             <div class="address-bar">https://bonmano.com/</div>
                                         </div>
-                                        <a href="bonmano02.jpg" target="_blank"
+                                        <a href="/images/bonmano02.jpg" target="_blank"
                                            title="Bonmano" class="popup-link">
                                             <img src="../src/assets/images/bonmano01.jpg"
                                                  alt="img-portfolio"
@@ -953,7 +954,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.magic-home.ir/</div>
                                         </div>
-                                        <a href="magic-home02.jpg" target="_blank"
+                                        <a href="/images/magic-home02.jpg" target="_blank"
                                            title="MAGIC" class="popup-link">
                                             <img src="../src/assets/images/magic-home01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -973,7 +974,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.badr24.com/</div>
                                         </div>
-                                        <a href="badr2402.jpg" target="_blank"
+                                        <a href="/images/badr2402.jpg" target="_blank"
                                            title="Badr24" class="popup-link">
                                             <img src="../src/assets/images/badr2401.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -993,7 +994,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.pasargadmobl.ir/</div>
                                         </div>
-                                        <a href="pasargadmobl02.jpg" target="_blank"
+                                        <a href="/images/pasargadmobl02.jpg" target="_blank"
                                            title="Caspianmobl" class="popup-link">
                                             <img src="../src/assets/images/pasargadmobl01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1013,7 +1014,7 @@
                                             </ul>
                                             <div class="address-bar">http://caspianmobl.ir/</div>
                                         </div>
-                                        <a href="caspian02.jpg" target="_blank"
+                                        <a href="/images/caspian02.jpg" target="_blank"
                                            title="Caspianmobl" class="popup-link">
                                             <img src="../src/assets/images/caspian01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1033,7 +1034,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.altontrading.com/</div>
                                         </div>
-                                        <a href="altontrading02.jpg" target="_blank"
+                                        <a href="/images/altontrading02.jpg" target="_blank"
                                            title="Paraye" class="popup-link">
                                             <img src="../src/assets/images/altontrading01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1053,7 +1054,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.paraye.com/</div>
                                         </div>
-                                        <a href="paraye02.jpg" target="_blank"
+                                        <a href="/images/paraye02.jpg" target="_blank"
                                            title="Paraye" class="popup-link">
                                             <img src="../src/assets/images/paraye01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1073,7 +1074,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.sedcompany.ir/</div>
                                         </div>
-                                        <a href="sedcompany02.jpg" target="_blank"
+                                        <a href="/images/sedcompany02.jpg" target="_blank"
                                            title="Sedcompany" class="popup-link">
                                             <img src="../src/assets/images/sedcompany01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1093,7 +1094,7 @@
                                             </ul>
                                             <div class="address-bar">http://tiamnetworks.ir/</div>
                                         </div>
-                                        <a href="tiamnetworks02.jpg" target="_blank"
+                                        <a href="/images/tiamnetworks02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/tiamnetworks01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1113,7 +1114,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.koohrangdairy.com/</div>
                                         </div>
-                                        <a href="koohrangdairy02.jpg" target="_blank"
+                                        <a href="/images/koohrangdairy02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/koohrangdairy01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1133,7 +1134,7 @@
                                             </ul>
                                             <div class="address-bar">https://lalehzarcenter.com/</div>
                                         </div>
-                                        <a href="lalehzarcenter02.jpg" target="_blank"
+                                        <a href="/images/lalehzarcenter02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/lalehzarcenter01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1153,7 +1154,7 @@
                                             </ul>
                                             <div class="address-bar">-</div>
                                         </div>
-                                        <a href="artman02.jpg" target="_blank"
+                                        <a href="/images/artman02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/artman01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
