--- a/public/index.html
+++ b/public/index.html
@@ -1235,7 +1235,7 @@
                                                         <i class="fas fa-map-pin"></i>
                                                     </div>
                                                     <h4>My Address</h4>
-                                                    <address>15 Valiasr St 41 Square Narmak Tehran</address>
+                                                    <address>Narmak Tehran</address>
                                                 </div>
                                             </div>
                                         </div>
