--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
 <head>
+    <meta charset="UTF-8"> <!--Define the character set used-->
+    <link rel="icon" href="./favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#ffc815">
+    <link rel="apple-touch-icon" href="./logo192.png">
+    <link rel="manifest" href="./manifest.json">
     <!--<base href="#" target="_blank"> the base URL and/or target for all relative URLs in a page-->
-    <title>Tayebeh Safdari</title>
     <!--The contents of a page title is very important for search engine optimization (SEO)! The page title is used by
          search engine algorithms to decide the order when listing pages in search results.-->
-    <meta charset="UTF-8"> <!--Define the character set used-->
     <!--<meta http-equiv="refresh" content="30"> Refresh document every 30 seconds-->
     <!--<script>
         var bleep = new Audio();
         bleep.src = "https://www.soundjay.com/button/sounds/beep-10.mp3";
     </script>-->
+    <title>Tayebeh Safdari</title>
 </head>
 <body>
 <div class="image-bg">
@@ -99,7 +104,8 @@
                                 </filter>
                             </defs>
                         </svg>
-                        <a href="/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae" id="component-1"
+                        <a href="/static/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
+                           id="component-1"
                            class="button--1"> <!--onmousedown="bleep.play()"-->
                             Curriculum Vitae
                             <span class="button__container">
@@ -281,7 +287,7 @@
                                     </filter>
                                 </defs>
                             </svg>
-                            <a href="/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
+                            <a href="/static/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
                                id="component-2"
                                class="button--2" style="filter:url('#filter-goo-2')"> <!--onmousedown="bleep.play()"-->
                                 Curriculum Vitae
@@ -649,7 +655,7 @@
                                             </ul>
                                             <div class="address-bar">http://cr7shop.ir/</div>
                                         </div>
-                                        <a href="/images/cr7shop02.jpg" target="_blank"
+                                        <a href="/static/images/cr7shop02.jpg" target="_blank"
                                            title="CR7 Shop" class="popup-link">
                                             <img src="../src/assets/images/cr7shop01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -669,7 +675,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.iranmrcarpet.com/</div>
                                         </div>
-                                        <a href="/images/iranmrcarpet02.jpg" target="_blank"
+                                        <a href="/static/images/iranmrcarpet02.jpg" target="_blank"
                                            title="Iran Mr. Carpet" class="popup-link">
                                             <img src="../src/assets/images/iranmrcarpet01.jpg"
                                                  alt="img-portfolio"
@@ -690,7 +696,7 @@
                                             </ul>
                                             <div class="address-bar">http://rostani.com/</div>
                                         </div>
-                                        <a href="/images/rostani02.jpg" target="_blank"
+                                        <a href="/static/images/rostani02.jpg" target="_blank"
                                            title="Rostani" class="popup-link">
                                             <img src="../src/assets/images/rostani01.jpg"
                                                  alt="img-portfolio"
@@ -711,7 +717,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.afzoonravan.com/</div>
                                         </div>
-                                        <a href="/images/afzoonravan02.jpg" target="_blank"
+                                        <a href="/static/images/afzoonravan02.jpg" target="_blank"
                                            title="Afzoonravan" class="popup-link">
                                             <img src="../src/assets/images/afzoonravan01.jpg"
                                                  alt="img-portfolio"
@@ -732,7 +738,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.bsi.ir/</div>
                                         </div>
-                                        <a href="/images/bsi02.jpg" target="_blank"
+                                        <a href="/static/images/bsi02.jpg" target="_blank"
                                            title="Petropaak" class="popup-link">
                                             <img src="../src/assets/images/bsi01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -752,7 +758,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.karafarinbank.ir/</div>
                                         </div>
-                                        <a href="/images/karafarinbank02.jpg" target="_blank"
+                                        <a href="/static/images/karafarinbank02.jpg" target="_blank"
                                            title="Petropaak" class="popup-link">
                                             <img src="../src/assets/images/karafarinbank01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -772,7 +778,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.vichyteen.com/</div>
                                         </div>
-                                        <a href="/images/vichyteen02.jpg" target="_blank"
+                                        <a href="/static/images/vichyteen02.jpg" target="_blank"
                                            title="VICHY" class="popup-link">
                                             <img src="../src/assets/images/vichyteen01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -792,7 +798,7 @@
                                             </ul>
                                             <div class="address-bar">http://vata.ir/</div>
                                         </div>
-                                        <a href="/images/vata02.jpg" target="_blank"
+                                        <a href="/static/images/vata02.jpg" target="_blank"
                                            title="Vata" class="popup-link">
                                             <img src="../src/assets/images/vata01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -812,7 +818,7 @@
                                             </ul>
                                             <div class="address-bar">https://novinleather.com/</div>
                                         </div>
-                                        <a href="/images/novinleather02.jpg" target="_blank"
+                                        <a href="/static/images/novinleather02.jpg" target="_blank"
                                            title="Novinleather" class="popup-link">
                                             <img src="../src/assets/images/novinleather01.jpg"
                                                  alt="img-portfolio"
@@ -833,7 +839,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.midhco.com/</div>
                                         </div>
-                                        <a href="/images/midhco02.jpg" target="_blank"
+                                        <a href="/static/images/midhco02.jpg" target="_blank"
                                            title="MIDHCO" class="popup-link">
                                             <img src="../src/assets/images/midhco01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -853,7 +859,7 @@
                                             </ul>
                                             <div class="address-bar">http://gtc1.org/</div>
                                         </div>
-                                        <a href="/images/gtc102.jpg" target="_blank"
+                                        <a href="/static/images/gtc102.jpg" target="_blank"
                                            title="GTC1" class="popup-link">
                                             <img src="../src/assets/images/gtc101.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -873,7 +879,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.fabrioni.com/</div>
                                         </div>
-                                        <a href="/images/fabrioni02.jpg" target="_blank"
+                                        <a href="/static/images/fabrioni02.jpg" target="_blank"
                                            title="Fabrioni" class="popup-link">
                                             <img src="../src/assets/images/fabrioni01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -893,7 +899,7 @@
                                             </ul>
                                             <div class="address-bar">http://medghoo.com/</div>
                                         </div>
-                                        <a href="/images/medghoo02.jpg" target="_blank"
+                                        <a href="/static/images/medghoo02.jpg" target="_blank"
                                            title="Medghoo" class="popup-link">
                                             <img src="../src/assets/images/medghoo01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -913,7 +919,7 @@
                                             </ul>
                                             <div class="address-bar">http://fastclick.ir/</div>
                                         </div>
-                                        <a href="/images/fastclick02.jpg" target="_blank"
+                                        <a href="/static/images/fastclick02.jpg" target="_blank"
                                            title="Fastclick" class="popup-link">
                                             <img src="../src/assets/images/fastclick01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -933,7 +939,7 @@
                                             </ul>
                                             <div class="address-bar">https://bonmano.com/</div>
                                         </div>
-                                        <a href="/images/bonmano02.jpg" target="_blank"
+                                        <a href="/static/images/bonmano02.jpg" target="_blank"
                                            title="Bonmano" class="popup-link">
                                             <img src="../src/assets/images/bonmano01.jpg"
                                                  alt="img-portfolio"
@@ -954,7 +960,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.magic-home.ir/</div>
                                         </div>
-                                        <a href="/images/magic-home02.jpg" target="_blank"
+                                        <a href="/static/images/magic-home02.jpg" target="_blank"
                                            title="MAGIC" class="popup-link">
                                             <img src="../src/assets/images/magic-home01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -974,7 +980,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.badr24.com/</div>
                                         </div>
-                                        <a href="/images/badr2402.jpg" target="_blank"
+                                        <a href="/static/images/badr2402.jpg" target="_blank"
                                            title="Badr24" class="popup-link">
                                             <img src="../src/assets/images/badr2401.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -994,7 +1000,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.pasargadmobl.ir/</div>
                                         </div>
-                                        <a href="/images/pasargadmobl02.jpg" target="_blank"
+                                        <a href="/static/images/pasargadmobl02.jpg" target="_blank"
                                            title="Caspianmobl" class="popup-link">
                                             <img src="../src/assets/images/pasargadmobl01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1014,7 +1020,7 @@
                                             </ul>
                                             <div class="address-bar">http://caspianmobl.ir/</div>
                                         </div>
-                                        <a href="/images/caspian02.jpg" target="_blank"
+                                        <a href="/static/images/caspian02.jpg" target="_blank"
                                            title="Caspianmobl" class="popup-link">
                                             <img src="../src/assets/images/caspian01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1034,7 +1040,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.altontrading.com/</div>
                                         </div>
-                                        <a href="/images/altontrading02.jpg" target="_blank"
+                                        <a href="/static/images/altontrading02.jpg" target="_blank"
                                            title="Paraye" class="popup-link">
                                             <img src="../src/assets/images/altontrading01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1054,7 +1060,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.paraye.com/</div>
                                         </div>
-                                        <a href="/images/paraye02.jpg" target="_blank"
+                                        <a href="/static/images/paraye02.jpg" target="_blank"
                                            title="Paraye" class="popup-link">
                                             <img src="../src/assets/images/paraye01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1074,7 +1080,7 @@
                                             </ul>
                                             <div class="address-bar">http://www.sedcompany.ir/</div>
                                         </div>
-                                        <a href="/images/sedcompany02.jpg" target="_blank"
+                                        <a href="/static/images/sedcompany02.jpg" target="_blank"
                                            title="Sedcompany" class="popup-link">
                                             <img src="../src/assets/images/sedcompany01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1094,7 +1100,7 @@
                                             </ul>
                                             <div class="address-bar">http://tiamnetworks.ir/</div>
                                         </div>
-                                        <a href="/images/tiamnetworks02.jpg" target="_blank"
+                                        <a href="/static/images/tiamnetworks02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/tiamnetworks01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1114,7 +1120,7 @@
                                             </ul>
                                             <div class="address-bar">https://www.koohrangdairy.com/</div>
                                         </div>
-                                        <a href="/images/koohrangdairy02.jpg" target="_blank"
+                                        <a href="/static/images/koohrangdairy02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/koohrangdairy01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1134,7 +1140,7 @@
                                             </ul>
                                             <div class="address-bar">https://lalehzarcenter.com/</div>
                                         </div>
-                                        <a href="/images/lalehzarcenter02.jpg" target="_blank"
+                                        <a href="/static/images/lalehzarcenter02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/lalehzarcenter01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
@@ -1154,7 +1160,7 @@
                                             </ul>
                                             <div class="address-bar">-</div>
                                         </div>
-                                        <a href="/images/artman02.jpg" target="_blank"
+                                        <a href="/static/images/artman02.jpg" target="_blank"
                                            title="Tiamnetworks" class="popup-link">
                                             <img src="../src/assets/images/artman01.jpg" alt="img-portfolio"
                                                  class="img-fluid">
