--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en-US" class="no-js">
 <head>
     <meta charset="UTF-8"> <!--Define the character set used-->
-    <link rel="icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ffc815">
-    <link rel="apple-touch-icon" href="logo192.png">
+    <!--    <meta name="theme-color" content="#ffc815">-->
+    <!--    <link rel="apple-touch-icon" href="logo192.png">-->
     <link rel="manifest" href="manifest.json">
+    <script async src="../src/assets/js/pwacompat.min.js"></script>
+    <link rel="icon" href="favicon.ico">
     <!--<base href="#" target="_blank"> the base URL and/or target for all relative URLs in a page-->
     <!--The contents of a page title is very important for search engine optimization (SEO)! The page title is used by
          search engine algorithms to decide the order when listing pages in search results.-->
