--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,8 @@
                         <a href="/static/images/curriculum-vitae.jpg" target="_blank" title="Curriculum-Vitae"
                            id="component-1"
                            class="button--1"> <!--onmousedown="bleep.play()"-->
-                            Curriculum Vitae
+                            <!--                            Curriculum Vitae-->
+                            Install App
                             <span class="button__container">
                                 <span class="circle top-left"></span>
                                 <span class="circle top-left"></span>
